
- MiniRSSParser now handles (and ignores) empty <link> elements in
  RSS version 0.92, RSS version 2.0, and Atom XML files.

- The "mimeType" object that the ScriptOutputHandler class publishes via
  the Bean Scripting Framework is now a java.io.StringWriter, instead of a
  java.io.StringBuffer. Use of a StringBuffer causes exceptions with BSF
  and the 1.5.0 JDK.


Version 1.5.9 (...)

- The "mimeType" object that the ScriptOutputHandler class publishes via
  the Bean Scripting Framework is now a java.io.StringWriter, instead of a
  java.io.StringBuffer. Use of a StringBuffer causes exceptions with BSF
  and the 1.5.0 JDK.


Version 1.5.8 (08 April, 2005)

- MiniRSSParser now handles (and ignores) empty <link> elements in
  RSS version 0.92, RSS version 2.0, and Atom XML files.
- When run in single-threaded mode (i.e., MaxThreads set to 1 in the
  configuration file), an exception that occurs while processing one
  feed doesn't abort the whole run.


Version 1.5.7 (09 February, 2005)

- Substitution expressions (e.g., in the PreparseEdit or EditItemURL
  configuration items) now properly properly handle substitutions of the empty
  string. Strings like this were previously rejected as syntactically
  incorrect:

      s/foo//

  They are now permitted and processed properly.

- build.xml no longer hard-codes jikes compiler. To use jikes, either
  pass 

      -Dbuild.compiler=jikes 

  to ant, or put that option in ANT_OPTS in your personal ant startup file
  ($HOME/.antrc on Unix, or %HOME%\antrc_pre.bat on Windows).

- build.xml corrected so it no longer unconditionally recompiles everything.

- Serializable classes now provide their own serialVersionUID variable, per
  recommendations in the JDK 1.5 java.io.Serializable docs and in jikes
  1.22 warnings.


Version 1.5.6 (02 December, 2004)

- Added new MaxSummarySize configuration parameter. If a summary exceeds
  the specified size, it is truncated. See the User's Guide and the sample